Update title to BUDGIE and subtitle to full name

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -90,8 +90,8 @@
     <div class="container">
         <!-- ISU mission patch (top-right) -->
         <img src="ISU-Logo-patch-300px.png" alt="ISU Mission Patch" class="isu-patch" />
-        <h1>Space Mission Financial Planning AI</h1>
-        <p class="subtitle">Agentic Architecture & System Design</p>
+    <h1>BUDGIE</h1>
+    <p class="subtitle">BUDGET UTILISATION DYNAMIC GUIDANCE INTELLIGENCE ENGINE</p>
 
         <div class="problem-statement">
             Planning a space mission involves complex decisions, high costs, and significant risks.
