Style: make BUDGIE larger/bold and split subtitle into two lines

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -16,8 +16,9 @@
             padding: 20px;
         }
     .container { max-width:1400px; margin:0 auto; position:relative; }
-        h1 { text-align:center; font-size:2.5rem; margin-bottom:10px; background:linear-gradient(45deg, #00d4ff, #7300ff); -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
-        .subtitle { text-align:center; color:#a0a0a0; margin-bottom:20px; font-size:1.0rem; }
+    h1 { text-align:center; font-size:4rem; margin-bottom:8px; font-weight:800; letter-spacing:1px; background:linear-gradient(45deg, #00d4ff, #7300ff); -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent; }
+    .subtitle { text-align:center; color:#a0a0a0; margin-bottom:12px; font-size:1.02rem; line-height:1.1; }
+    .subtitle-line { display:block; font-weight:600; color:#cfefff; }
 
         /* problem-statement (kept from original) */
         .problem-statement {
@@ -91,7 +92,7 @@
         <!-- ISU mission patch (top-right) -->
         <img src="ISU-Logo-patch-300px.png" alt="ISU Mission Patch" class="isu-patch" />
     <h1>BUDGIE</h1>
-    <p class="subtitle">BUDGET UTILISATION DYNAMIC GUIDANCE INTELLIGENCE ENGINE</p>
+    <p class="subtitle"><span class="subtitle-line">BUDGET UTILISATION DYNAMIC</span><span class="subtitle-line">GUIDANCE INTELLIGENCE ENGINE</span></p>
 
         <div class="problem-statement">
             Planning a space mission involves complex decisions, high costs, and significant risks.
