--- a/Aiposter.html
+++ b/Aiposter.html
@@ -9,7 +9,7 @@
         /* Combined, conflict-resolved stylesheet: dark theme + problem-statement styles */
         * { margin:0; padding:0; box-sizing:border-box; }
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: "Calibri", Arial, Helvetica, sans-serif;
             background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
             color: #ffffff;
             min-height: 100vh;
