--- a/Aiposter.html
+++ b/Aiposter.html
@@ -124,6 +124,9 @@
         .chart-container { margin:18px auto; background: var(--white); padding:16px; border-radius:10px; max-width:900px; box-shadow: var(--card-shadow); }
         .chart-container canvas { width:100% !important; height:260px !important; max-height:360px; }
 
+        /* Starfield background canvas */
+        #starfield { position:fixed; top:0; left:0; width:100%; height:100%; z-index:0; pointer-events:none; display:block; }
+
         /* ISU mission patch - top-right */
     .isu-patch { position:absolute; top:0px; right:12px; width:110px; height:auto; border-radius:8px; box-shadow:0 8px 20px rgba(0,0,0,0.6); z-index:20; }
 
@@ -136,6 +139,8 @@
     </style>
 </head>
 <body>
+    <!-- Starfield canvas (subtle animated stars) -->
+    <canvas id="starfield" aria-hidden="true"></canvas>
     <!-- Hero Banner -->
     <div class="hero-banner">
         <div class="hero-content">
@@ -249,6 +254,57 @@
         </div>
 
     </div>
+
+    <!-- Starfield script -->
+    <script>
+    (function() {
+        const canvas = document.getElementById('starfield');
+        if (!canvas) return;
+        const ctx = canvas.getContext('2d');
+        let w = 0, h = 0, stars = [];
+
+        function resize() {
+            w = canvas.width = window.innerWidth;
+            h = canvas.height = window.innerHeight;
+            initStars();
+        }
+
+        function initStars() {
+            stars = [];
+            const area = w * h;
+            const count = Math.max(60, Math.floor(area / 10000));
+            for (let i = 0; i < count; i++) {
+                stars.push({
+                    x: Math.random() * w,
+                    y: Math.random() * h,
+                    r: Math.random() * 1.2 + 0.3,
+                    baseAlpha: Math.random() * 0.6 + 0.2,
+                    twinkle: Math.random() * 2 + 0.5,
+                    phase: Math.random() * Math.PI * 2
+                });
+            }
+        }
+
+        let last = 0;
+        function draw(ts) {
+            const delta = ts - last; last = ts;
+            ctx.clearRect(0,0,w,h);
+            for (let s of stars) {
+                const a = s.baseAlpha * (0.6 + 0.4 * Math.sin((ts/1000) * s.twinkle + s.phase));
+                ctx.globalAlpha = a;
+                ctx.fillStyle = '#ffffff';
+                ctx.beginPath();
+                ctx.arc(s.x, s.y, s.r, 0, Math.PI * 2);
+                ctx.fill();
+            }
+            requestAnimationFrame(draw);
+        }
+
+        window.addEventListener('resize', resize);
+        resize();
+        requestAnimationFrame(draw);
+    })();
+    </script>
 
     <!-- Chart.js Script -->
     <script>
