--- a/Aiposter.html
+++ b/Aiposter.html
@@ -43,17 +43,14 @@
             overflow: hidden;
             margin-bottom: 2rem;
             border-radius: 0;
-            /* SpaceAI-like layered background with starfield */
+            /* Hero background: Pexels space image with gradient overlay for text legibility */
             background-image:
-                radial-gradient(2px 2px at 20px 30px, #eee, rgba(0,0,0,0)),
-                radial-gradient(2px 2px at 60px 70px, #fff, rgba(0,0,0,0)),
-                radial-gradient(1px 1px at 50px 50px, #fff, rgba(0,0,0,0)),
-                radial-gradient(1px 1px at 130px 80px, #fff, rgba(0,0,0,0)),
-                radial-gradient(2px 2px at 90px 10px, #fff, rgba(0,0,0,0)),
-                linear-gradient(135deg, rgba(0, 18, 64, 0.92) 0%, rgba(5, 30, 60, 0.9) 40%, rgba(10, 40, 90, 0.85) 100%);
-            background-repeat: repeat;
-            background-size: 200px 200px, 200px 200px, 200px 200px, 200px 200px, 200px 200px, cover;
-            background-blend-mode: screen, screen, screen, screen, screen, normal;
+                linear-gradient(135deg, rgba(0, 18, 64, 0.75) 0%, rgba(5, 30, 60, 0.72) 40%, rgba(10, 40, 90, 0.68) 100%),
+                url('pexels-shashank-brahmavar-737732917-18507019.jpg');
+            background-size: cover, cover;
+            background-position: center, center;
+            background-attachment: scroll;
+            background-blend-mode: overlay;
         }
         
         .hero-content {
