UI: Darken image further with multiply blend mode for better title contrast

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -43,14 +43,14 @@
             overflow: hidden;
             margin-bottom: 2rem;
             border-radius: 0;
-            /* Hero background: Pexels space image with gradient overlay for text legibility */
+            /* Hero background: Pexels space image with stronger gradient overlay for text legibility */
             background-image:
-                linear-gradient(135deg, rgba(0, 18, 64, 0.88) 0%, rgba(5, 30, 60, 0.85) 40%, rgba(10, 40, 90, 0.82) 100%),
+                linear-gradient(135deg, rgba(0, 18, 64, 0.92) 0%, rgba(5, 30, 60, 0.90) 40%, rgba(10, 40, 90, 0.88) 100%),
                 url('pexels-shashank-brahmavar-737732917-18507019.jpg');
             background-size: cover, cover;
             background-position: center, center;
             background-attachment: scroll;
-            background-blend-mode: overlay;
+            background-blend-mode: multiply;
         }
         
         .hero-content {
