UI: Add cool gradient + glow effect to title underline

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -95,9 +95,11 @@
             font-weight: 700;
             letter-spacing: 0.12em;
             padding-bottom: 16px;
-            border-bottom: 2px solid rgba(255, 255, 255, 0.6);
+            border-bottom: 3px solid transparent;
+            border-image: linear-gradient(90deg, rgba(255,255,255,0), rgba(100,200,255,0.8), rgba(255,255,255,0.9), rgba(100,200,255,0.8), rgba(255,255,255,0)) 1;
             display: inline-block;
             width: 100%;
+            box-shadow: 0 10px 30px rgba(100, 200, 255, 0.3);
         }
         .subtitle { text-align:center; color: rgba(255,255,255,0.95); margin-bottom:10px; font-size:1.0rem; }
 
