--- a/Aiposter.html
+++ b/Aiposter.html
@@ -89,17 +89,17 @@
         h1 { 
             text-align:center; 
             font-size:3.2rem; 
-            margin-bottom:8px; 
+            margin-bottom:16px; 
             color: var(--white); 
             font-family: var(--heading-font); 
             font-weight: 700;
             letter-spacing: 0.12em;
             padding-bottom: 16px;
-            border-bottom: 3px solid transparent;
-            border-image: linear-gradient(90deg, rgba(255,255,255,0), rgba(100,200,255,0.8), rgba(255,255,255,0.9), rgba(100,200,255,0.8), rgba(255,255,255,0)) 1;
+            background: linear-gradient(90deg, transparent, rgba(100,200,255,0.9), rgba(255,255,255,0.8), rgba(100,200,255,0.9), transparent) bottom no-repeat;
+            background-size: 100% 3px;
             display: inline-block;
             width: 100%;
-            box-shadow: 0 10px 30px rgba(100, 200, 255, 0.3);
+            position: relative;
         }
         .subtitle { text-align:center; color: rgba(255,255,255,0.95); margin-bottom:10px; font-size:1.0rem; }
 
