UI: Fix chart container - increase height and padding for better readability

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -156,8 +156,9 @@
         .metric-label { font-size:0.85rem; color: #666; margin-top:6px; }
 
         /* Constrain charts so they don't become oversized on wide displays */
-        .chart-container { margin:18px auto; background: var(--white); padding:16px; border-radius:10px; max-width:900px; box-shadow: var(--card-shadow); }
-        .chart-container canvas { width:100% !important; height:260px !important; max-height:360px; }
+        .chart-container { margin:24px auto; background: var(--white); padding:24px; border-radius:10px; max-width:1000px; width:100%; box-shadow: var(--card-shadow); }
+        .chart-container h2 { margin-bottom:18px; color: var(--isu-blue); font-size:1.3rem; }
+        .chart-container canvas { width:100% !important; height:380px !important; }
 
         @media (max-width:768px){
             .components { grid-template-columns:1fr; }
