--- a/Aiposter.html
+++ b/Aiposter.html
@@ -145,10 +145,13 @@
         .flow-diagram { background: var(--white); border-radius:14px; padding:20px; margin-top:28px; box-shadow: var(--card-shadow); }
         .flow-title { text-align:center; font-size:1.2rem; margin-bottom:16px; color: var(--isu-blue); }
         .flow-steps { display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:12px; }
-        .flow-step { flex:1; min-width:140px; text-align:center; position:relative; }
-        .flow-step-circle { width:64px; height:64px; background: linear-gradient(135deg, var(--isu-blue), var(--isu-accent)); border-radius:50%; margin:0 auto 10px; display:flex; align-items:center; justify-content:center; font-size:1.6rem; font-weight:bold; color: var(--white); box-shadow: var(--card-shadow); }
+        .flow-step { flex:1; min-width:140px; text-align:center; position:relative; transition: transform 0.3s ease; cursor: pointer; }
+        .flow-step:hover { transform: scale(1.08); }
+        .flow-step:hover .flow-step-circle { background: linear-gradient(135deg, var(--isu-accent), #0d4fb8); box-shadow: 0 8px 20px rgba(10, 60, 134, 0.4); }
+        .flow-step-circle { width:64px; height:64px; background: linear-gradient(135deg, var(--isu-blue), var(--isu-accent)); border-radius:50%; margin:0 auto 10px; display:flex; align-items:center; justify-content:center; font-size:1.6rem; font-weight:bold; color: var(--white); box-shadow: var(--card-shadow); transition: all 0.3s ease; }
         .flow-step-text { font-size:0.95rem; color: var(--text-color); }
-        .flow-arrow { position:absolute; top:30px; right:-26px; font-size:1.6rem; color: var(--isu-accent); }
+        .flow-arrow { position:absolute; top:30px; right:-26px; font-size:1.8rem; color: var(--isu-accent); animation: arrowPulse 1.5s ease-in-out infinite; }
+        @keyframes arrowPulse { 0%, 100% { transform: translateX(0); opacity: 0.6; } 50% { transform: translateX(4px); opacity: 1; } }
 
         .metrics-dashboard { display:grid; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); gap:12px; margin-top:20px; }
         .metric-card { background: var(--white); padding:12px; border-radius:10px; text-align:center; border:1px solid #ddd; box-shadow: 0 4px 12px rgba(0, 20, 84, 0.08); }
@@ -163,7 +166,8 @@
         @media (max-width:768px){
             .components { grid-template-columns:1fr; }
             .agent-grid { grid-template-columns:1fr; }
-            .flow-arrow { display:none; }
+        .flow-arrow { position:absolute; top:30px; right:-26px; font-size:1.8rem; color: var(--isu-accent); animation: arrowPulse 1.5s ease-in-out infinite; }
+        @keyframes arrowPulse { 0%, 100% { transform: translateX(0); opacity: 0.6; } 50% { transform: translateX(4px); opacity: 1; } }
             .hero-logo { width: 80px; }
             h1 { font-size: 2rem; }
         }
