--- a/Aiposter.html
+++ b/Aiposter.html
@@ -150,8 +150,8 @@
         .flow-step:hover .flow-step-circle { background: linear-gradient(135deg, var(--isu-accent), #0d4fb8); box-shadow: 0 8px 20px rgba(10, 60, 134, 0.4); }
         .flow-step-circle { width:64px; height:64px; background: linear-gradient(135deg, var(--isu-blue), var(--isu-accent)); border-radius:50%; margin:0 auto 10px; display:flex; align-items:center; justify-content:center; font-size:1.6rem; font-weight:bold; color: var(--white); box-shadow: var(--card-shadow); transition: all 0.3s ease; }
         .flow-step-text { font-size:0.95rem; color: var(--text-color); }
-        .flow-arrow { position:absolute; top:30px; right:-26px; font-size:1.8rem; color: var(--isu-accent); animation: arrowPulse 1.5s ease-in-out infinite; }
-        @keyframes arrowPulse { 0%, 100% { transform: translateX(0); opacity: 0.6; } 50% { transform: translateX(4px); opacity: 1; } }
+        .flow-arrow { position:absolute; top:22px; right:-32px; width:50px; height:50px; filter: drop-shadow(0 2px 6px rgba(10, 60, 134, 0.4)); animation: arrowSlide 1.5s ease-in-out infinite; }
+        @keyframes arrowSlide { 0%, 100% { transform: translateX(0); opacity: 0.7; } 50% { transform: translateX(6px); opacity: 1; filter: drop-shadow(0 3px 10px rgba(10, 60, 134, 0.6)); } }
 
         .metrics-dashboard { display:grid; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); gap:12px; margin-top:20px; }
         .metric-card { background: var(--white); padding:12px; border-radius:10px; text-align:center; border:1px solid #ddd; box-shadow: 0 4px 12px rgba(0, 20, 84, 0.08); }
@@ -166,8 +166,8 @@
         @media (max-width:768px){
             .components { grid-template-columns:1fr; }
             .agent-grid { grid-template-columns:1fr; }
-        .flow-arrow { position:absolute; top:30px; right:-26px; font-size:1.8rem; color: var(--isu-accent); animation: arrowPulse 1.5s ease-in-out infinite; }
-        @keyframes arrowPulse { 0%, 100% { transform: translateX(0); opacity: 0.6; } 50% { transform: translateX(4px); opacity: 1; } }
+        .flow-arrow { position:absolute; top:22px; right:-32px; width:50px; height:50px; filter: drop-shadow(0 2px 6px rgba(10, 60, 134, 0.4)); animation: arrowSlide 1.5s ease-in-out infinite; }
+        @keyframes arrowSlide { 0%, 100% { transform: translateX(0); opacity: 0.7; } 50% { transform: translateX(6px); opacity: 1; filter: drop-shadow(0 3px 10px rgba(10, 60, 134, 0.6)); } }
             .hero-logo { width: 80px; }
             h1 { font-size: 2rem; }
         }
@@ -257,10 +257,10 @@
         <div class="flow-diagram">
             <h2 class="flow-title">Intelligent Planning Process Flow</h2>
             <div class="flow-steps">
-                <div class="flow-step"><div class="flow-step-circle">1</div><div class="flow-step-text">Mission Requirements Input</div><div class="flow-arrow">→</div></div>
-                <div class="flow-step"><div class="flow-step-circle">2</div><div class="flow-step-text">Multi-Agent Analysis</div><div class="flow-arrow">→</div></div>
-                <div class="flow-step"><div class="flow-step-circle">3</div><div class="flow-step-text">Optimization & Planning</div><div class="flow-arrow">→</div></div>
-                <div class="flow-step"><div class="flow-step-circle">4</div><div class="flow-step-text">Scenario Evaluation</div><div class="flow-arrow">→</div></div>
+                <div class="flow-step"><div class="flow-step-circle">1</div><div class="flow-step-text">Mission Requirements Input</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
+                <div class="flow-step"><div class="flow-step-circle">2</div><div class="flow-step-text">Multi-Agent Analysis</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
+                <div class="flow-step"><div class="flow-step-circle">3</div><div class="flow-step-text">Optimization & Planning</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
+                <div class="flow-step"><div class="flow-step-circle">4</div><div class="flow-step-text">Scenario Evaluation</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
                 <div class="flow-step"><div class="flow-step-circle">5</div><div class="flow-step-text">Financial Plan Output</div></div>
             </div>
         </div>
