--- a/Aiposter.html
+++ b/Aiposter.html
@@ -103,6 +103,16 @@
 
         /* problem-statement */
         .problem-statement {
+
+        /* High-Level Purpose Section */
+        .purpose-section { background: linear-gradient(135deg, #f8faff, #ffffff); border-radius:16px; padding:28px; margin-bottom:28px; border-left:5px solid var(--isu-blue); box-shadow: var(--card-shadow); }
+        .purpose-title { font-size:1.5rem; color: var(--isu-blue); margin-bottom:14px; font-weight:700; text-align:center; }
+        .purpose-intro { font-size:1.05rem; color: var(--text-color); margin-bottom:20px; text-align:center; line-height:1.7; }
+        .purpose-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(280px, 1fr)); gap:16px; }
+        .purpose-item { background:var(--white); padding:16px; border-radius:12px; display:flex; align-items:center; gap:14px; box-shadow:0 4px 12px rgba(0, 20, 84, 0.08); transition: transform 0.3s ease, box-shadow 0.3s ease; border-left:3px solid var(--isu-accent); }
+        .purpose-item:hover { transform: translateY(-4px); box-shadow: 0 8px 20px rgba(0, 20, 84, 0.15); }
+        .purpose-icon { font-size:2rem; min-width:40px; text-align:center; }
+        .purpose-text { font-size:0.95rem; color: var(--text-color); line-height:1.5; }
             background: #e6f0ff;
             color: var(--text-color);
             padding: 20px;
@@ -191,6 +201,38 @@
             in near-real time to support efficient financial planning.
         </div>
 
+
+        <!-- High-Level Purpose -->
+        <div class="purpose-section">
+            <h2 class="purpose-title">High-Level Purpose</h2>
+            <p class="purpose-intro">B.U.D.G.I.E takes mission input data (like payload mass, TRL, mission duration, etc.), learns patterns from historical missions, and then:</p>
+            <div class="purpose-grid">
+                <div class="purpose-item">
+                    <div class="purpose-icon">📊</div>
+                    <div class="purpose-text">Predicts total mission cost using machine learning</div>
+                </div>
+                <div class="purpose-item">
+                    <div class="purpose-icon">⚠️</div>
+                    <div class="purpose-text">Calculates risk and cost-overrun probabilities</div>
+                </div>
+                <div class="purpose-item">
+                    <div class="purpose-icon">📈</div>
+                    <div class="purpose-text">Fits statistical distributions to uncertainty</div>
+                </div>
+                <div class="purpose-item">
+                    <div class="purpose-icon">📉</div>
+                    <div class="purpose-text">Generates visualizations (Gantt timelines, cost breakdowns, risk matrix, etc.)</div>
+                </div>
+                <div class="purpose-item">
+                    <div class="purpose-icon">🎯</div>
+                    <div class="purpose-text">Optimizes budget allocation</div>
+                </div>
+                <div class="purpose-item">
+                    <div class="purpose-icon">📋</div>
+                    <div class="purpose-text">Outputs a dashboard for decision-makers</div>
+                </div>
+            </div>
+        </div>
         <!-- Architecture Layers -->
         <div class="architecture-container">
             <!-- Layer 5: Interface & Reporting -->
