--- a/Aiposter.html
+++ b/Aiposter.html
@@ -146,17 +146,22 @@
         .flow-diagram { background: var(--white); border-radius:14px; padding:20px; margin-top:28px; box-shadow: var(--card-shadow); }
         .flow-title { text-align:center; font-size:1.2rem; margin-bottom:16px; color: var(--isu-blue); }
         .purpose-intro { 
-            display:inline-block;
+            display:block;
             background: linear-gradient(135deg, #f0f6ff 0%, #ffffff 40%, #f0f6ff 100%);
-            padding:14px 22px;
+            padding:16px 26px;
             border-radius: 999px;
-            font-size:0.95rem;
-            color: var(--text-color);
+            font-size:1.05rem;
+            font-weight:700;
+            color: var(--isu-blue);
+            text-align:center;
+            letter-spacing: 0.02em;
+            text-shadow: 0 1px 0 rgba(255,255,255,0.6);
             box-shadow: 0 6px 18px rgba(0,20,84,0.12);
             border:1px solid rgba(0,20,84,0.18);
             position: relative;
             margin: 0 auto 20px;
-            max-width:900px;
+            width: fit-content;
+            max-width: 900px;
         }
         .purpose-intro::after {
             content:'';
@@ -223,7 +228,7 @@
         <!-- High-Level Purpose Flow -->
         <div class="flow-diagram">
             <h2 class="flow-title">High-Level Purpose: How B.U.D.G.I.E Works</h2>
-            <p class="purpose-intro">B.U.D.G.I.E takes mission input data (like payload mass, TRL, mission duration, etc.), learns patterns from historical missions, and then:</p>
+            <p class="purpose-intro"><strong>B.U.D.G.I.E</strong> takes mission input data (like payload mass, TRL, mission duration, etc.), learns patterns from historical missions, and then:</p>
             <div class="flow-steps">
                 <div class="flow-step">
                     <div class="flow-step-circle">📊</div>
@@ -259,6 +264,18 @@
                 </div>
             </div>
         </div>
+        <!-- Process Flow (moved up under High-Level Purpose) -->
+        <div class="flow-diagram">
+            <h2 class="flow-title">Intelligent Planning Process Flow</h2>
+            <div class="flow-steps">
+                <div class="flow-step"><div class="flow-step-circle">1</div><div class="flow-step-text">Mission Requirements Input</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
+                <div class="flow-step"><div class="flow-step-circle">2</div><div class="flow-step-text">Multi-Agent Analysis</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
+                <div class="flow-step"><div class="flow-step-circle">3</div><div class="flow-step-text">Optimization & Planning</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
+                <div class="flow-step"><div class="flow-step-circle">4</div><div class="flow-step-text">Scenario Evaluation</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
+                <div class="flow-step"><div class="flow-step-circle">5</div><div class="flow-step-text">Financial Plan Output</div></div>
+            </div>
+        </div>
+
         <!-- Architecture Layers -->
         <div class="architecture-container">
             <!-- Layer 5: Interface & Reporting -->
@@ -321,17 +338,7 @@
             </div>
         </div>
 
-        <!-- Process Flow -->
-        <div class="flow-diagram">
-            <h2 class="flow-title">Intelligent Planning Process Flow</h2>
-            <div class="flow-steps">
-                <div class="flow-step"><div class="flow-step-circle">1</div><div class="flow-step-text">Mission Requirements Input</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-                <div class="flow-step"><div class="flow-step-circle">2</div><div class="flow-step-text">Multi-Agent Analysis</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-                <div class="flow-step"><div class="flow-step-circle">3</div><div class="flow-step-text">Optimization & Planning</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-                <div class="flow-step"><div class="flow-step-circle">4</div><div class="flow-step-text">Scenario Evaluation</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-                <div class="flow-step"><div class="flow-step-circle">5</div><div class="flow-step-text">Financial Plan Output</div></div>
-            </div>
-        </div>
+        <!-- Process Flow (removed duplicate lower instance, single instance kept above) -->
 
         <!-- Key Performance Metrics -->
         <div class="metrics-dashboard">
