--- a/Aiposter.html
+++ b/Aiposter.html
@@ -205,14 +205,47 @@
             filter: drop-shadow(0 -2px 3px rgba(0,20,84,0.12));
         }
         .purpose-intro:hover { box-shadow: 0 8px 24px rgba(10,60,134,0.25); transform: translateY(-2px); transition: all 0.35s ease; }
-        .flow-steps { display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:12px; }
-        .flow-step { flex:1; min-width:140px; text-align:center; position:relative; transition: transform 0.3s ease; cursor: pointer; }
-        .flow-step:hover { transform: scale(1.08); }
-        .flow-step:hover .flow-step-circle { background: linear-gradient(135deg, var(--isu-accent), #0d4fb8); box-shadow: 0 8px 20px rgba(10, 60, 134, 0.4); }
-        .flow-step-circle { width:64px; height:64px; background: linear-gradient(135deg, var(--isu-blue), var(--isu-accent)); border-radius:50%; margin:0 auto 10px; display:flex; align-items:center; justify-content:center; font-size:1.6rem; font-weight:bold; color: var(--white); box-shadow: var(--card-shadow); transition: all 0.3s ease; }
-        .flow-step-text { font-size:0.95rem; color: var(--text-color); }
-        .flow-arrow { position:absolute; top:22px; right:-32px; width:50px; height:50px; filter: drop-shadow(0 2px 6px rgba(10, 60, 134, 0.4)); animation: arrowSlide 1.5s ease-in-out infinite; }
-        @keyframes arrowSlide { 0%, 100% { transform: translateX(0); opacity: 0.7; } 50% { transform: translateX(6px); opacity: 1; filter: drop-shadow(0 3px 10px rgba(10, 60, 134, 0.6)); } }
+        .flow-steps { 
+            position: relative;
+            width: 560px;
+            height: 560px;
+            margin: 0 auto 10px;
+            border-radius: 50%;
+            padding: 0;
+        }
+        .flow-step { 
+            position:absolute; 
+            width:140px; 
+            text-align:center; 
+            transform:translate(-50%, -50%); 
+        }
+        .flow-step-circle { 
+            width:68px; height:68px; 
+            background: linear-gradient(135deg, var(--isu-blue), var(--isu-accent)); 
+            border-radius:50%; 
+            margin:0 auto 8px; 
+            display:flex; align-items:center; justify-content:center; 
+            font-size:1.4rem; font-weight:bold; color:#fff; 
+            box-shadow: 0 6px 14px rgba(0,20,84,0.25); 
+        }
+        .flow-step-text { font-size:0.85rem; color: var(--text-color); font-weight:600; }
+        /* Positions around circle (center at 50%,50%) */
+        .flow-step[data-pos="1"] { top:8%; left:50%; }
+        .flow-step[data-pos="2"] { top:25%; left:85%; }
+        .flow-step[data-pos="3"] { top:55%; left:93%; }
+        .flow-step[data-pos="4"] { top:82%; left:72%; }
+        .flow-step[data-pos="5"] { top:92%; left:38%; }
+        .flow-step[data-pos="6"] { top:75%; left:13%; }
+        .flow-step[data-pos="7"] { top:45%; left:4%; }
+        .flow-step[data-pos="8"] { top:18%; left:20%; }
+        .flow-center { 
+            position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); 
+            width:220px; height:220px; background: linear-gradient(135deg,#ffffff,#eef4ff); border:2px solid var(--isu-accent); border-radius:50%; 
+            display:flex; flex-direction:column; align-items:center; justify-content:center; padding:20px; text-align:center; box-shadow:0 10px 28px rgba(0,20,84,0.15);
+        }
+        .flow-center h3 { font-size:0.95rem; color: var(--isu-blue); margin-bottom:6px; }
+        .flow-center p { font-size:0.7rem; line-height:1.2; color:#333; }
+        /* remove arrow animation */
 
         .metrics-dashboard { display:grid; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); gap:12px; margin-top:20px; }
         .metric-card { background: var(--white); padding:12px; border-radius:10px; text-align:center; border:1px solid #ddd; box-shadow: 0 4px 12px rgba(0, 20, 84, 0.08); }
@@ -298,11 +331,18 @@
         <div class="flow-diagram">
             <h2 class="flow-title">Intelligent Planning Process Flow</h2>
             <div class="flow-steps">
-                <div class="flow-step"><div class="flow-step-circle">1</div><div class="flow-step-text">Mission Requirements Input</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-                <div class="flow-step"><div class="flow-step-circle">2</div><div class="flow-step-text">Multi-Agent Analysis</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-                <div class="flow-step"><div class="flow-step-circle">3</div><div class="flow-step-text">Optimization & Planning</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-                <div class="flow-step"><div class="flow-step-circle">4</div><div class="flow-step-text">Scenario Evaluation</div><svg class="flow-arrow" width="40" height="40" viewBox="0 0 40 40"><defs><linearGradient id="arrowGrad" x1="0%" y1="0%" x2="100%" y2="0%"><stop offset="0%" style="stop-color:#0a3c86;stop-opacity:0.6" /><stop offset="100%" style="stop-color:#0a3c86;stop-opacity:1" /></linearGradient></defs><path d="M5,20 L30,20 M25,15 L35,20 L25,25" stroke="url(#arrowGrad)" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-                <div class="flow-step"><div class="flow-step-circle">5</div><div class="flow-step-text">Financial Plan Output</div></div>
+                <div class="flow-step" data-pos="1"><div class="flow-step-circle">1</div><div class="flow-step-text">Mission Requirements<br/>Input</div></div>
+                <div class="flow-step" data-pos="2"><div class="flow-step-circle">2</div><div class="flow-step-text">Multi-Agent<br/>Analysis</div></div>
+                <div class="flow-step" data-pos="3"><div class="flow-step-circle">3</div><div class="flow-step-text">Optimization &<br/>Planning</div></div>
+                <div class="flow-step" data-pos="4"><div class="flow-step-circle">4</div><div class="flow-step-text">Scenario<br/>Evaluation</div></div>
+                <div class="flow-step" data-pos="5"><div class="flow-step-circle">5</div><div class="flow-step-text">Financial Plan<br/>Output</div></div>
+                <div class="flow-step" data-pos="6"><div class="flow-step-circle">6</div><div class="flow-step-text">Risk & Cost<br/>Assessment</div></div>
+                <div class="flow-step" data-pos="7"><div class="flow-step-circle">7</div><div class="flow-step-text">Budget<br/>Optimization</div></div>
+                <div class="flow-step" data-pos="8"><div class="flow-step-circle">8</div><div class="flow-step-text">Dashboard &<br/>Reporting</div></div>
+                <div class="flow-center">
+                    <h3>Central Intelligence</h3>
+                    <p>Coordinated AI agents<br/>continuously refine cost,<br/>risk & budget decisions.</p>
+                </div>
             </div>
         </div>
 
