Remove pill highlights from problem statement, keep bold emphasis

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -281,8 +281,8 @@
 
         <div class="problem-statement">
             <div>
-                <strong>Planning a space mission</strong> involves <span class="pill">complex decisions</span>, <span class="pill">high costs</span>, and <span class="pill">significant risks</span>. <br/>
-                Our <strong>AI-driven system</strong> enables <span class="pill">multi-agent collaboration</span> to <strong>estimate costs</strong>, <strong>optimize budgets</strong>, and <strong>assess risks</strong> in <span class="pill">near-real time</span> to support efficient <strong>financial planning</strong>.
+                <strong>Planning a space mission</strong> involves complex decisions, high costs, and significant risks. 
+                Our <strong>AI-driven system</strong> enables multi-agent collaboration to <strong>estimate costs</strong>, <strong>optimize budgets</strong>, and <strong>assess risks</strong> in near-real time to support efficient <strong>financial planning</strong>.
             </div>
         </div>
 
