--- a/Aiposter.html
+++ b/Aiposter.html
@@ -117,17 +117,18 @@
             box-shadow: var(--card-shadow);
         }
         .problem-statement::before {
-            content: '🚀';
-            flex: 0 0 38px;
-            width: 38px; height: 38px;
+            content: '';
+            flex: 0 0 48px;
+            width: 48px; height: 48px;
             display: inline-flex;
             align-items: center;
             justify-content: center;
             border-radius: 50%;
             background: linear-gradient(135deg, var(--isu-blue), var(--isu-accent));
-            color: #fff;
+            background-image: url('pixelated-budgie-logo.png');
+            background-size: cover;
+            background-position: center;
             box-shadow: 0 6px 16px rgba(0,20,84,0.18);
-            filter: saturate(1.1);
             margin-top: 2px;
         }
         .problem-statement strong { color: var(--isu-blue); }
