Update problem statement to focus on BUDGIE for startups/emerging companies

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -296,7 +296,7 @@
         <div class="problem-statement">
             <div>
                 <strong>Planning a space mission</strong> involves complex decisions, high costs, and significant risks. 
-                Our <strong>AI-driven system</strong> enables multi-agent collaboration to <strong>estimate costs</strong>, <strong>optimize budgets</strong>, and <strong>assess risks</strong> in near-real time to support efficient <strong>financial planning</strong>.
+                <strong>BUDGIE</strong> enables rapid, <strong>AI-driven cost estimation</strong>, <strong>budget optimization</strong>, and <strong>risk assessment</strong> in near real-time — empowering startups and emerging space companies to make confident financial decisions early, without requiring large cost-analysis teams or deep historical datasets.
             </div>
         </div>
 
