Shorten Rapid Cost Estimation card text

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -434,7 +434,7 @@
             <div class="planners-grid">
                 <div class="planner-item">
                     <h3>Rapid Cost Estimation</h3>
-                    <p>Get preliminary cost estimates in seconds, not weeks — enabling faster proposal turnaround and early-stage feasibility analysis.</p>
+                    <p>Get preliminary cost estimates in seconds</p>
                 </div>
                 <div class="planner-item">
                     <h3>Data-Light Approach</h3>
