--- a/Aiposter.html
+++ b/Aiposter.html
@@ -214,6 +214,21 @@
         .flow-step:hover .flow-step-circle { background: linear-gradient(135deg, var(--isu-accent), #0d4fb8); box-shadow: 0 8px 20px rgba(10, 60, 134, 0.4); }
         .flow-step-circle { width:64px; height:64px; background: linear-gradient(135deg, var(--isu-blue), var(--isu-accent)); border-radius:50%; margin:0 auto 10px; display:flex; align-items:center; justify-content:center; font-size:1.6rem; font-weight:bold; color: var(--white); box-shadow: var(--card-shadow); transition: all 0.3s ease; }
         .flow-step-text { font-size:0.95rem; color: var(--text-color); }
+        /* Arrows between linear flow steps */
+        .flow-arrow { 
+            position:absolute; 
+            top:50%; 
+            right:-28px; 
+            width:40px; 
+            height:40px; 
+            transform: translateY(-50%);
+            filter: drop-shadow(0 2px 6px rgba(10, 60, 134, 0.4)); 
+            animation: arrowSlide 1.5s ease-in-out infinite; 
+        }
+        @keyframes arrowSlide { 
+            0%, 100% { transform: translateY(-50%) translateX(0); opacity: 0.8; } 
+            50% { transform: translateY(-50%) translateX(6px); opacity: 1; filter: drop-shadow(0 3px 10px rgba(10, 60, 134, 0.6)); } 
+        }
         
         /* Circular flow for Intelligent Planning Process Flow */
         .flow-steps-circular { 
@@ -351,8 +366,8 @@
         @media (max-width:768px){
             .components { grid-template-columns:1fr; }
             .agent-grid { grid-template-columns:1fr; }
-        .flow-arrow { position:absolute; top:22px; right:-32px; width:50px; height:50px; filter: drop-shadow(0 2px 6px rgba(10, 60, 134, 0.4)); animation: arrowSlide 1.5s ease-in-out infinite; }
-        @keyframes arrowSlide { 0%, 100% { transform: translateX(0); opacity: 0.7; } 50% { transform: translateX(6px); opacity: 1; filter: drop-shadow(0 3px 10px rgba(10, 60, 134, 0.6)); } }
+            /* keep arrow sizing comfortable on mobile */
+            .flow-arrow { right:-24px; width:36px; height:36px; }
             .hero-logo { width: 80px; }
             h1 { font-size: 2rem; }
         }
