Simplify and refine Space Mission Planning Essentials card text

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -395,11 +395,11 @@
                 </div>
                 <div class="planner-item">
                     <h3>Data-Light Approach</h3>
-                    <p>BUDGIE leverages transfer learning and industry benchmarks, so you don't need extensive historical mission data to get started.</p>
+                    <p>So you don't need extensive historical mission data to get started.</p>
                 </div>
                 <div class="planner-item">
                     <h3>Risk-Aware Budgeting</h3>
-                    <p>Integrated risk assessment and uncertainty quantification help you build realistic contingency buffers and avoid cost overruns.</p>
+                    <p>Build realistic contingency buffers and avoid cost overruns with integrated risk assessment</p>
                 </div>
                 <div class="planner-item">
                     <h3>Multi-Scenario Analysis</h3>
@@ -407,7 +407,7 @@
                 </div>
                 <div class="planner-item">
                     <h3>Designed for Agility</h3>
-                    <p>Perfect for startups and emerging companies that need professional-grade cost planning without dedicated financial teams.</p>
+                    <p>Optimised for startups and emerging companies that need professional-grade cost planning.</p>
                 </div>
                 <div class="planner-item">
                     <h3>Transparent AI Insights</h3>
