Remove periods from BUDGIE acronym throughout poster

--- a/Aiposter.html
+++ b/Aiposter.html
@@ -369,7 +369,7 @@
     <div class="hero-banner">
         <div class="hero-content">
             <img src="ISU-Logo-patch-300px.png" alt="ISU Mission Patch" class="hero-logo" />
-            <h1>B.U.D.G.I.E</h1>
+            <h1>BUDGIE</h1>
             <p class="subtitle"><span class="subtitle-line">BUDGET UTILISATION DYNAMIC</span><span class="subtitle-line">GUIDANCE INTELLIGENCE ENGINE</span></p>
         </div>
     </div>
@@ -418,8 +418,8 @@
 
         <!-- High-Level Purpose Flow -->
         <div class="flow-diagram">
-            <h2 class="flow-title">High-Level Purpose: How B.U.D.G.I.E Works</h2>
-            <p class="purpose-intro"><strong>B.U.D.G.I.E</strong> takes mission input data (like payload mass, TRL, mission duration, etc.), learns patterns from historical missions, and then:</p>
+            <h2 class="flow-title">High-Level Purpose: How BUDGIE Works</h2>
+            <p class="purpose-intro"><strong>BUDGIE</strong> takes mission input data (like payload mass, TRL, mission duration, etc.), learns patterns from historical missions, and then:</p>
             <div class="flow-steps">
                 <div class="flow-step">
                     <div class="flow-step-circle">📊</div>
