--- a/Aiposter.html
+++ b/Aiposter.html
@@ -153,7 +153,8 @@
         .layer:nth-child(5) { animation-delay:0.5s; }
         @keyframes fadeInUp { to { opacity:1; transform:translateY(0); } }
 
-        .layer-header { background: linear-gradient(90deg, var(--isu-blue), var(--isu-accent)); padding:12px 16px; border-radius:10px; margin-bottom:12px; display:flex; justify-content:space-between; align-items:center; }
+    .layer-header { background: linear-gradient(90deg, var(--isu-blue), var(--isu-accent)); padding:12px 16px; border-radius:10px; margin-bottom:12px; display:flex; justify-content:space-between; align-items:center; }
+    .layer-header.centered { justify-content:center; gap:12px; }
         .layer-title { font-size:1.05rem; font-weight:600; color: var(--white); }
         .layer-badge { background: var(--light-bg); padding:5px 12px; border-radius:16px; font-size:0.85rem; color: var(--isu-blue); }
 
@@ -476,9 +477,9 @@
 
         <!-- Architecture Layers -->
         <div class="architecture-container">
-            <!-- Layer 5: Interface & Reporting -->
+            <!-- BUDGIE In Action (formerly Layer 5: Interface & Reporting) -->
             <div class="layer">
-                <div class="layer-header"><span class="layer-title">Layer 5: Interface & Reporting</span><span class="layer-badge">User Interaction</span></div>
+                <div class="layer-header centered"><span class="layer-title">BUDGIE In Action</span><span class="layer-badge">User Interaction</span></div>
                 <div class="components">
                     <div class="component"><div class="component-icon">📊</div><div class="component-name">Interactive Dashboards</div><div class="component-desc">Real-time visualization of mission finances</div></div>
                     <div class="component"><div class="component-icon">💬</div><div class="component-name">NLP Query Interface</div><div class="component-desc">Natural language financial queries</div></div>
